# inertial_alignment

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md~  cmake_install.cmake  inertial_alignment  inertial_alignment.cpp  inertial_alignment.hpp  inertial_alignment_functions.cpp
Data/: imu.yaml  sensor.yaml~  test.csv  test.csv~
Misc/: imu_alignment.m
Test/: inertial_alignment_test  inertial_alignment_test.cpp
